--- a/rachaelspage.html
+++ b/rachaelspage.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html>
+<body>
   <head>
+    <body style="background-image: url();">
     <meta charset="utf-8">
     <title>Rachael's Web Page</title>
     <link href="styles.css" rel="stylesheet" type="text/css">
-  </head>
-  <body>
-    <body>
-  <div id="page-wrap">
-</body>
-    <h1>Welcome to my Webpage</h1>
-    <img src="https://scontent-ord1-1.xx.fbcdn.net/v/t1.0-9/525750_4283037801021_762278452_n.jpg?oh=6f2e7d3e98b5c8e0cd826c4f9f9f7c5b&oe=57E0B66D" alt="me">
+    <link href="css/bootstrap.min.css" rel="stylesheet".>
+    </head>
+    <div id="page-wrap">
+    <div class="page-header">
+    <header class="page-header">
+      <h1 class="intro">Hi, I'm Rachael</h1>
+      <img src="https://scontent-ord1-1.xx.fbcdn.net/v/t1.0-9/525750_4283037801021_762278452_n.jpg?oh=6f2e7d3e98b5c8e0cd826c4f9f9f7c5b&oe=57E0B66D" alt="me" class="profile-image">
+    </header>
+      </div>
+      <ul>
+        <li>Aspiring Designer</li>
+        <li>Coffee Addict</li>
+        <li>Former Berlin Alley Rat</li>
+      </ul>
       <p>
-        <div class="info">
-         <h2>About Me</h2>
-          <p class="intro">I'm a student in Intro to Programming at Epicodus. On this page I'm going to tell you a little about myself and what I did before coming to Epidcodus.</p>
+         <h2>A Little About Me</h2>
+          <p class="about">I'm a student in Intro to Programming at Epicodus. I like to describe myself as a freshly hatched code-ling, everything is new, terrifying, and I can't wait to learn all I can.</p>
           <p>
          I worked at a technology based non-profit in San Francisco. The irony of moving away from the epicenter of the tech industry to begin a career in programming isn't lost on me. But when I was accepted to Epicodus I packed up and moved.
          In college I studied 20th century European History which means I know a lot about the causes of the collapse of the Soviet Union, but not much about coding.</p>
@@ -22,7 +30,7 @@
          at a historical cemetery, or reading a book somewhere. I chose to attend Epicodus because I liked what the program had to offer, and I thought that
          this would be the best place to learn the skills to start a new career.
        </p>
-       </div>
+
       <h3>My Recent Projects</h3>
         <p>
           I have only been in the Intro to Programming course for a week but I have already created a lot of projects!
@@ -34,7 +42,7 @@
 
           </ul>
         </p>
-        <p>Thanks for reading this strange little page.</p>
+        <p>Thanks for looking at my page.</p>
     </div>
   </body>
 </html>
