adjust indents in html and css

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <div id="page-wrap"
   <head>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    <div class="container">
-    <div class="my-profile">
-        <img align="left" class="banner-image-md" src="http://65.media.tumblr.com/9148e87c1d3229e8fd52fe496f623480/tumblr_njb956m1UN1sll9gto1_500.jpg" alt="coffeebooks"/>
-        <img align="left" class="profile" src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/10429336_10203548985192092_1027628297444948133_n.jpg?oh=7ab9b97cca951bd65fd4edd476a0712c&oe=57D93B70" alt="me"/>
-        <div class="intro-text">
-          <h1>Rachael Bermudes</h1>
+      <div class="container">
+        <div class="my-profile">
+          <img align="left" class="banner-image-md" src="http://65.media.tumblr.com/9148e87c1d3229e8fd52fe496f623480/tumblr_njb956m1UN1sll9gto1_500.jpg" alt="coffeebooks"/>
+          <img align="left" class="profile" src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/10429336_10203548985192092_1027628297444948133_n.jpg?oh=7ab9b97cca951bd65fd4edd476a0712c&oe=57D93B70" alt="me"/>
+          <div class="intro-text">
+            <h1>Rachael Bermudes</h1>
+          </div>
         </div>
-    </div>
-</div>
+      </div>
     <meta charset="utf-8">
     <title>Rachael's Web Page</title>
     <link href="styles.css" rel="stylesheet" type="text/css">
@@ -20,18 +20,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <div class="container-fluid">
-      <p>
-         <h2>A Little About Me</h2>
+      <h2>A Little About Me</h2>
           <p class="about">I'm a student in Intro to Programming at Epicodus. I like to describe myself as a freshly hatched code-ling, everything is new, terrifying, and I can't wait to learn all I can.
-            I'm interested in front end development and during my time here I hope to develop those skills.
+              I'm interested in front end development and during my time here I hope to develop those skills.
           </p>
+
           <p>
-         I worked at a technology based non-profit in San Francisco. The irony of moving away from the epicenter of the tech industry to begin a career in programming isn't lost on me. But when I was accepted to Epicodus I packed up and moved.
-         In college I studied 20th century European History which means I know a lot about the causes of the collapse of the Soviet Union, and I make a great addition to any Trivia Night team.</p>
-         I am new to Portland, so in my free time I like to discover what the city has to offer. If I'm not discovering new things about Portland, I am usually knitting, cleaning headstones
-         at a historical cemetery, or reading a book somewhere. I chose to attend Epicodus because I liked what the program had to offer, and I thought that
-         this would be the best place to learn the skills to start a new career.
-       </p>
+           I worked at a technology based non-profit in San Francisco. The irony of moving away from the epicenter of the tech industry to begin a career in programming isn't lost on me. But when I was accepted to Epicodus I packed up and moved.
+           In college I studied 20th century European History which means I know a lot about the causes of the collapse of the Soviet Union, and I make a great addition to any Trivia Night team.
+           I am new to Portland, so in my free time I like to discover what the city has to offer. If I'm not discovering new things about Portland, I am usually knitting, cleaning headstones
+           at a historical cemetery, or reading a book somewhere. I chose to attend Epicodus because I liked what the program had to offer, and I thought that
+           this would be the best place to learn the skills to start a new career.
+          </p>
 
       <h3>My Recent Projects</h3>
         <p>
@@ -41,11 +41,10 @@
             <li><a href="https://github.com/ribermudes/cupcake/blob/master/cupcake.html">Madame Lulu's Cupcakes: Website for a cupcake shop using HTML and CSS.</a></li>
             <li><a href="https://github.com/ribermudes/Boring-Lecture/blob/master/boring.html">Zen And The Art of Watching Paint Dry: A Boring Lecture, presented using HTML and CSS. </a></li>
             <li><a href="https://github.com/ribermudes/animal-shelter">Last Chance Animal Shelter: Rescue site using HTML and CSS.</a></li>
-
           </ul>
         </p>
-        <p>Thanks for looking at my page.</p>
+      <p>Thanks for looking at my page.</p>
     </div>
-  </div>
-  </body>
+</div>
+</body>
 </html>
