--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <title>Rachael's Web Page</title>
     <link href="styles.css" rel="stylesheet" type="text/css">
-    <link href="bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
 
     <div id="page-wrap">
-
-    <div class="container">
+      <div class="container">
       <div class="my-profile">
         <img align="left" class="banner-image-md" src="http://65.media.tumblr.com/9148e87c1d3229e8fd52fe496f623480/tumblr_njb956m1UN1sll9gto1_500.jpg" alt="coffeebooks"/>
         <img align="left" class="profile" src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/10429336_10203548985192092_1027628297444948133_n.jpg?oh=7ab9b97cca951bd65fd4edd476a0712c&oe=57D93B70" alt="me"/>
@@ -25,8 +24,7 @@
 
     <div class="container-fluid">
       <h2>A Little About Me</h2>
-          <p class="about">I'm a student in Intro to Programming at Epicodus. I like to describe myself as a freshly hatched code-ling, everything is new, terrifying, and I can't wait to learn all I can.
-              I'm interested in front end development and during my time here I hope to develop those skills.
+          <p class="about">I'm a student in Intro to Programming at Epicodus. I like to describe myself as a freshly hatched code-ling, everything is new, terrifying, and I can't wait to learn all I can. I'm interested in front end development and during my time here I hope to develop those skills.
           </p>
 
           <p>
