add bootstrap class

--- a/index.html
+++ b/index.html
@@ -17,15 +17,13 @@
         <img align="left" class="profile" src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/10429336_10203548985192092_1027628297444948133_n.jpg?oh=7ab9b97cca951bd65fd4edd476a0712c&oe=57D93B70" alt="me"/>
       </div>
     </div>
-
     <div class="intro-text">
+      <div class="container-fluid">
       <h1>Rachael Bermudes</h1>
-    </div>
-    <div class="container-fluid">
-    <h2>A Little About Me</h2>
+      <h2>A Little About Me</h2>
     <p class="about">I'm a student in Intro to Programming at Epicodus. I like to describe myself as a freshly hatched code-ling, everything is new, terrifying, and I can't wait to learn all I can. I'm interested in front end development and during my time here I hope to develop those skills.
     </p>
-
+    </div>
     <p>
     I worked at a technology based non-profit in San Francisco. The irony of moving away from the epicenter of the tech industry to begin a career in programming isn't lost on me. But when I was accepted to Epicodus I packed up and moved.
     In college I studied 20th century European History which means I know a lot about the causes of the collapse of the Soviet Union, and I make a great addition to any Trivia Night team.
@@ -33,15 +31,14 @@
     at a historical cemetery, or reading a book somewhere. I chose to attend Epicodus because I liked what the program had to offer, and I thought that
     this would be the best place to learn the skills to start a new career.
     </p>
-
     <h3>My Recent Projects</h3>
     <p>
     I have only been in the Intro to Programming course for a week but I have already created a lot of projects!
     Below I have included links to my favorites:
-      <ul>
-      <li><a href="https://github.com/ribermudes/cupcake/blob/master/cupcake.html">Madame Lulu's Cupcakes: Website for a cupcake shop using HTML and CSS.</a></li>
-      <li><a href="https://github.com/ribermudes/Boring-Lecture/blob/master/boring.html">Zen And The Art of Watching Paint Dry: A Boring Lecture, presented using HTML and CSS. </a></li>
-      <li><a href="https://github.com/ribermudes/animal-shelter">Last Chance Animal Shelter: Rescue site using HTML and CSS.</a></li>
+      <ul class="list-group">
+      <li class="list-group-item"><a href="https://github.com/ribermudes/cupcake/blob/master/cupcake.html">Madame Lulu's Cupcakes: Website for a cupcake shop using HTML and CSS.</a></li>
+      <li class="list-group-item"><a href="https://github.com/ribermudes/Boring-Lecture/blob/master/boring.html">Zen And The Art of Watching Paint Dry: A Boring Lecture, presented using HTML and CSS. </a></li>
+      <li class= "list-group-item"><a href="https://github.com/ribermudes/animal-shelter">Last Chance Animal Shelter: Rescue site using HTML and CSS.</a></li>
       </ul>
     </p>
     <p>Thanks for looking at my page.</p>
